# gs-icp-slam-ros2

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  Dockerfile  Dockerfile.rocm  README.md  ROS_README.md  SUMMARY.txt  build_docker.sh  entrypoint.sh  package.xml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: docker-build.yml
config/: slam_config.yaml
docs/: ADVANCED.md  API.md  CONTRIBUTING.md  DEVELOPMENT.md  TUTORIALS.md  api_reference.py
docs/examples/: example_bag_playback.py  example_basic.py  example_configuration.py  example_visualization.py
four_dgs_slam/: __init__.py  launch_helpers.py  mp_Tracker.py  node.py
gs_icp_slam/: 4dgs_slam_node.py  4dgs_slam_package.py  gs_icp_slam.py  node.py  parameters.py
launch/: 4dgs_slam_basic.launch.py  4dgs_slam_visualization.launch.py  4dgs_slam_with_bag.launch.py  gs_icp_slam_basic.launch.py  gs_icp_slam_visualization.launch.py  gs_icp_slam_with_bag.launch.py  slam.launch.py
scripts/: install.py  run_slam.py  setup_development_env.sh
tests/: test_node_startup.sh  test_parameters.py
