<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gs_icp_slam</name>
  <version>1.0.0</version>
  <description>ROS2 wrapper for GS-ICP-SLAM system</description>
  <maintainer email="your.email@example.com">Your Name</maintainer>
  <license>MIT</license>

  <url type="bugtracker">https://github.com/yourusername/4dgs_slam_ros2/issues</url>
  <url type="repository">https://github.com/yourusername/4dgs_slam_ros2</url>

  <author email="your.email@example.com">Your Name</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>cv_bridge</depend>

  <exec_depend>python3-pip</exec_depend>
  <exec_depend>python3-dev</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>